# Memento-Sol

./: CHANGELOG.md  README.md  TRANSFORM_PLAN.md  USER_GUIDE.md  VERSIONING.md  build.gradle.kts  gradle.properties  settings.gradle.kts  strip_dt_needed.py  style.md
app/: build.gradle.kts  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  opencl_stub.c
app/src/main/cpp/include/: README.md
app/src/main/java/com/memento/sol/: MainActivity.kt  NodeApp.kt
app/src/main/java/com/memento/sol/account/: AccountManager.kt  TokenManager.kt
app/src/main/java/com/memento/sol/api/: MementoApi.kt
app/src/main/java/com/memento/sol/asset/: AssetList.kt  AssetRepository.kt  (+2 more)
app/src/main/java/com/myagent/app/: AppearanceThemeMode.kt  BuildConfig.kt  DeviceNames.kt  LocationMode.kt  MainActivity.kt  MainViewModel.kt  NodeApp.kt  NodeRuntime.kt  SecurePrefs.kt  SkinMode.kt
app/src/main/jniLibs/arm64-v8a/: README.md
app/src/main/res/drawable/: myagent_logo.xml
app/src/main/res/values/: assistant.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml  shortcuts.xml
benchmark/: build.gradle.kts
fastlane/: .env.example  Appfile  Fastfile  SETUP.md
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/en-US/changelogs/: 2026060201.txt
gradle/: libs.versions.toml
scripts/: build-release-artifacts.ts  perf-online-benchmark.sh  perf-startup-benchmark.sh  perf-startup-hotspots.sh  voice-e2e.sh
(+63 files in other folders)
